--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -13,4 +13,9 @@
     <servlet-name>Faces Servlet</servlet-name>
     <url-pattern>*.xhtml</url-pattern>
   </servlet-mapping>
+   <servlet>
+        <servlet-name>AutoPopulate</servlet-name>
+        <servlet-class>br.com.ecommerce.model.AutoPopulate</servlet-class>
+        <load-on-startup>1</load-on-startup>
+    </servlet>
 </web-app>
